public/stylesheets/index.css
@import 'buttons.css';
@import 'jquery/plugins/inat/photo_selectors.css';
@import 'jquery/plugins/inat/sound_selectors.css';
@import 'statuses.css';
@import 'prevnext.css';
@import 'flickr_photos.css';
@import 'projects.css';

body {
  margin: 0;
  padding: 0;
  font-family: "Trebuchet MS", Arial, sans-serif;
  color: #333;
}

h1, h2, h3, h4, h5, h6 {
  font-family: Georgia, serif;
  margin-bottom: 0.5em;
}

h3{line-height:1.3;}
em{background:none;}
img,
p img{margin:0;float:none;}
tfoot, tfoot td { font-style: normal; font-weight: bold; }
.small{margin-bottom:0; line-height: 1.4;}
.large{margin-bottom:0; line-height: 2;}
pre, code {margin: 0;}

/* Container Types */
.wide.container {
  width: 98%;
  margin: 1em;
}

/* Link Styles */
a {
  color: #36C;
  text-decoration: none;
}

a:hover {
  color: #039;
}


/* Tabs List Skeleton */
.tabs > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.tabs > ul li {
  float: left;
  position: relative;
  margin: 0;
  padding: 0 1em;
  padding-top: 7px;
  padding-bottom: 8px;
}

/* UI Elements -- Labels, button text, that kind of thing */
.ui, .ui p { font-family: "Trebuchet MS", Arial, sans-serif; }
p.ui, .ui p { font-size: 100%; }
p.ui { margin-bottom: 10px; }
.ui-tooltip p, .qtip p, .qtip-content p { font-size: 100%; font-family: "Trebuchet MS", Arial, sans-serif; }

.tinyui {
  font-family: "Trebuchet MS", Arial, sans-serif;
  font-size: 8pt;
}

/* Readable Elements -- anything that is meant to be read */
.readable, p {
  font-family: Georgia, serif;
  font-size: 125%;
}

.readable p {
  font-size: 100%;
}

/* In-text floats */
.left,
.button.left {
  float: left;
  clear: left;
  margin-right: 10px;
  margin-left: 0;
}

.right,
.button.right {
  float: right;
  clear: right;
  margin-left: 10px;
  margin-right: 0;
}

/* Default Form Styles */
textarea.text,
input.text,
input.file,
.select {
  border: 1px solid #ccc;
  width: auto;
  background-color: #f6f6f6;
  margin: 0;
}

textarea,
input.text,
input.file,
.select {
  padding: 0.4em;
  font-size: 125%;
}

.select { padding: 0; }
select { width: auto; max-width: 200px; }

textarea:focus,
input.text:focus,
input.file:focus,
input[type="text"]:focus,
input[type="file"]:focus {
  background-color: white;
  border-color: #ccc;
}

input,select,textarea{font-family:"Trebuchet MS",Arial,sans-serif;}
form .field{margin-bottom:10px;}

.twocolform .field {position:relative; padding-left: 110px;}
.twocolform .field .label {width: 100px; position:absolute; top:0; left: 0; text-align:right;}
.twocolform .field.text_field .label {padding-top:0.6em;}

.required{color:deeppink;}
.label { margin-bottom: 0.2em;}
form .field .description { margin-bottom: 0.5em;}
.label .fieldWithErrors{display:inline;}
.stacked{margin-bottom:10px;}
.upstacked{margin-top:10px;}
.unstacked, .column.unstacked{margin-bottom:0px;}
.lined {padding-bottom: 10px; margin-bottom:10px; border-bottom: 1px solid #eee;}
.fieldWithErrors {
  padding: 2px;
  background-color: lightpink;
  display: table;
}

/* Site Header */

#header {
  margin: 0px 10px 1em;
  height: 29px;
  line-height: 1.25em;
  border-bottom: 1px dotted #ccc;
  min-width: 900px;
}

#header ul {
  list-style: none;
}
#header .navtabs {
  display: inline;
  padding: 0;
  margin: 0;
}

#header .navtabs li {
  position: relative;
  background-color: white;
}

#header .navtabs li,
#header .navtabs .inter {
  display: block;
  float: left;
}

#header .navtabs a,
#header .navtabs .inter {
  display: block;
  padding: 7px 5px;
}

#header .navtabs .inter {
  padding: 7px 0px 0;
  color: #777;
}

#header .navtabs .inter a {
  float: none;
  padding: 0;
  display: inline;
}

#mainnav a:hover{background-color:lightyellow;}
#mainnav li.current{background-color:lightyellow;}
#mainnav a.subnavlink:hover{background-color:transparent;}
#mainnav .logolink{margin-right:10px;line-height:0;}
#mainnav .logolink:hover{background-color:transparent;}
#header .navtabs a.logolink{padding:3px 0 4px;}

#header .subnavwrapper {z-index: 10;}
#header .subnav {
  position: absolute;
  top: 30px;
  right: 0px;
  margin: 0;
  padding:0;
  border-right: 2px solid #ccc;
  border-bottom: 2px solid #ccc;
  border-left: 1px solid #ccc;
  z-index: 1000;
}

#header .navtabs .subnav li,
#header .navtabs .subnav a {
  float: none;
}

#header .navtabs .subnav li {
  border-top: 1px solid #eee;
}

#mainnav.navtabs .subnav a {
  padding-right: 25px;
}

#header .navtabs .observationstab .subnav a,
#header .navtabs .projectstab .subnav a {
  background-image: url('/images/logo-eee-15px.png');
  background-position: 148px center;
  background-repeat: no-repeat;
}

#header .navtabs .subnav li:first-child,
#header .navtabs .subnav li li {
  border-top: 0 none;
}

#header .subnav ul {
  margin: 0 0 0 20px;
  padding:0;
}

#header .navtabs .subnav ul a {
  padding: 2px 10px;
}

#mainnav a {
  font-weight: bold;
  font-size: 14px;
}

#mainnav .subnav li { text-align: right; }

#usernav {
  float: right;
}

#header .navtabs a.togglelink {
  background-position: right 50%;
  padding-right: 15px;
}

#header .navtabs .subnavtab {
  border-right: 2px solid transparent;
  border-left: 1px solid transparent;
}

#header .navtabs .open {
  border-right: 2px solid #ccc;
  border-left: 1px solid #ccc;
  border-bottom:1px solid white;
}

#header .navtabs .subnavtab a {
  float: left;
}

#header .navtabs .subnavtab a:first-child {
  padding-right: 5px;
}

#header .navtabs .subnavtab .subnavlink {
  padding-left: 2px;
  padding-right: 2px;
  text-align: center;
  outline: 0;
}

#usersubnav li a {
  display: block;
  width: auto;
  min-height: 15px;
  background: url('/images/logo-eee-15px.png') 5px 50% no-repeat;
}

#usersubnav li a:hover {
  background: url('/images/logo-15px.png') 5px 50% no-repeat;
}

#header .navtabs #usersubnav a {
  padding-left: 28px;
}

#usersubnav .observations_link {
  background-image: url('/images/notebook-icon-eee-15px.png');
  background-position: 7px 40%;
  background-attachment: no-repeat;
}
/* ... */

